--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,7 @@ import { Image } from 'astro:assets';
 import TestimonialMarquee from '../components/TestimonialMarquee.astro';
 import ProblemSection from '../components/ProblemSection.astro';
 import Verticletab from '../components/Verticletab.astro';
-import OurWork from '../components/OurWork.astro';
+import FeaturedWork from '../components/FeaturedWork.astro';
 import Multilanguage from "../components/Multilanguage.astro"
 import Features from '../components/Features.astro';
 import Comparision from '../components/Comparision.astro';
@@ -28,7 +28,7 @@ return Astro.redirect(`/${defaultLang}`);
   <Multilanguage></Multilanguage>
   <TestimonialMarquee :visible/>
   <Ctaone></Ctaone>
-  <OurWork></OurWork>
+  <FeaturedWork></FeaturedWork>
   <Comparision></Comparision>
   <Faq></Faq>
   
